--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
 
-    <title>PaymentIQ Cashier</title>
+    <title>Cashier</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
